--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "wiseconvert-frontend",
   "version": "1.0.0",
@@ -11,19 +10,19 @@
   },
   "dependencies": {
     "next": "14.1.0",
+    "pdfjs-dist": "^5.4.449",
     "react": "18.2.0",
     "react-dom": "18.2.0"
-    "pdfjs-dist": "^4.4.6"
   },
   "devDependencies": {
     "@types/node": "20.10.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
     "autoprefixer": "10.4.16",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.1.0",
     "postcss": "8.4.31",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0"
+    "typescript": "5.3.3"
   }
 }
